--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "Software para la gestion de codigo, comandos y notas de desarrollo",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_PATH=. mocha -R spec test/server/*.spec.js",
+    "test": "NODE_PATH=. DB_Conection='test' mocha -R spec test/server/**/*.spec.js",
     "cp-static": "cp -r  cliente/static/ public/static",
     "dist": "babel server/server.js server/**/*.js  --out-dir dist --presets es2015,react",
     "server2": "NODE_PATH=. babel-node  server/server --presets es2015,react ",
     "server": "NODE_PATH=./dist node dist/server/server.js",
-    "server3": "NODE_PATH=. node server/server.js",
+    "server3": "DB_Conection='test' NODE_PATH=. node server/server.js",
     "stylusGenerar": "stylus -c cliente/stylus/style.stly -o public/static/css",
     "stylus": "stylus -w -c cliente/stylus/style.stly -o public/static/css",
     "start": "  npm run dist && npm run server2"
@@ -44,6 +44,7 @@
     "to-markdown": "^3.0.0"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "istanbul": "^0.4.3",
     "mocha": "^2.5.3",
     "supertest": "^1.2.0"
