--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Software para la gestion de codigo, comandos y notas de desarrollo",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_PATH=. DB_Conection='test' mocha -R spec test/server/**/*.spec.js",
+    "test": "NODE_PATH=. DB_Conection='test'  mocha  -R spec test/server/*.spec.js && NODE_PATH=. DB_Conection='test' mocha -R spec --recursive  test/server/**/*.spec.js",
+    "test2": "NODE_PATH=. DB_Conection='test' istanbul cover _mocha -- -R spec test/server/*.spec.js && NODE_PATH=. DB_Conection='test' mocha -R spec --recursive  test/server/**/*.spec.js",
+    "test2": "NODE_PATH=. DB_Conection='test' istanbul cover _mocha -- -R spec test/server/*.spec.js && NODE_PATH=. DB_Conection='test' mocha -R spec --recursive  test/server/**/*.spec.js",
     "cp-static": "cp -r  cliente/static/ public/static",
     "dist": "babel server/server.js server/**/*.js  --out-dir dist --presets es2015,react",
     "server2": "NODE_PATH=. babel-node  server/server --presets es2015,react ",
@@ -33,7 +35,10 @@
     "hjs": "0.0.6",
     "marked": "^0.3.5",
     "mongoose": "^4.4.20",
+    "mongoose-json-select": "^0.2.1",
+    "mongoose-token": "^1.0.3",
     "passport": "^0.3.2",
+    "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
     "react": "^15.1.0",
@@ -41,12 +46,19 @@
     "react-router": "^2.4.1",
     "stylus": "^0.54.5",
     "superagent": "^2.0.0",
-    "to-markdown": "^3.0.0"
+    "to-markdown": "^3.0.0",
+    "validator": "^5.4.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
     "istanbul": "^0.4.3",
     "mocha": "^2.5.3",
     "supertest": "^1.2.0"
+  },
+  "standard": {
+    "ignore": [
+      "describe",
+      "myVar2"
+    ]
   }
 }
