--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Software para la gestion de codigo, comandos y notas de desarrollo",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_PATH=. DB_Conection='test'  mocha  -R spec test/server/*.spec.js && NODE_PATH=. DB_Conection='test' mocha -R spec --recursive  test/server/**/*.spec.js",
+    "test": "NODE_PATH=. DB_Conection='test' mocha -R spec --recursive  test/server/model/*.spec.js",
+    "test1": "NODE_PATH=. DB_Conection='test' mocha -R spec --recursive  test/server/**/*.spec.js",
     "test2": "NODE_PATH=. DB_Conection='test' istanbul cover _mocha -- -R spec test/server/*.spec.js && NODE_PATH=. DB_Conection='test' mocha -R spec --recursive  test/server/**/*.spec.js",
     "cp-static": "cp -r  cliente/static/ public/static",
     "dist": "babel server/server.js server/**/*.js  --out-dir dist --presets es2015,react",
@@ -26,16 +27,20 @@
     "browserify": "^13.0.1",
     "connect-mongo": "^1.2.0",
     "cookie-parser": "^1.4.3",
+    "email-templates": "^2.3.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
+    "futures": "^2.3.3",
     "hammerjs": "^2.0.8",
+    "handlebars": "^4.0.5",
     "highlight.js": "^9.4.0",
     "history": "^3.0.0",
     "hjs": "0.0.6",
     "marked": "^0.3.5",
-    "mongoose": "^4.4.20",
+    "mongoose": "^4.5.3",
     "mongoose-json-select": "^0.2.1",
     "mongoose-token": "^1.0.3",
+    "nodemailer": "^2.4.2",
     "passport": "^0.3.2",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
@@ -46,7 +51,9 @@
     "stylus": "^0.54.5",
     "superagent": "^2.0.0",
     "to-markdown": "^3.0.0",
-    "validator": "^5.4.0"
+    "underscore": "^1.8.3",
+    "validator": "^5.4.0",
+    "winston": "^2.2.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
