--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dist": "babel server/server.js server/**/*.js  --out-dir dist --presets es2015,react",
     "server2": "NODE_PATH=. babel-node  server/server --presets es2015,react ",
     "server": "NODE_PATH=./dist node dist/server/server.js",
-    "server3": "DB_Conection='test' NODE_PATH=. node server/server.js",
+    "server3": "DB_Conection='test' NODE_PATH=. node bin/www",
     "stylusGenerar": "stylus -c cliente/stylus/style.stly -o public/static/css",
     "stylus": "stylus -w -c cliente/stylus/style.stly -o public/static/css",
     "start": "  npm run dist && npm run server2"
@@ -26,6 +26,7 @@
     "babelify": "^7.3.0",
     "body-parser": "^1.15.1",
     "browserify": "^13.0.1",
+    "compression": "^1.6.2",
     "connect-mongo": "^1.2.0",
     "cookie-parser": "^1.4.3",
     "email-templates": "^2.3.0",
@@ -41,6 +42,7 @@
     "mongoose": "^4.5.9",
     "mongoose-json-select": "^0.2.1",
     "mongoose-token": "^1.0.3",
+    "morgan": "^1.7.0",
     "nodemailer": "^2.4.2",
     "passport": "^0.3.2",
     "passport-http-bearer": "^1.0.1",
@@ -49,6 +51,7 @@
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-router": "^2.4.1",
+    "serve-favicon": "^2.3.0",
     "stylus": "^0.54.5",
     "superagent": "^2.0.0",
     "to-markdown": "^3.0.0",
