--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "highlight.js": "^9.4.0",
     "history": "^3.0.0",
     "hjs": "0.0.6",
+    "jsonwebtoken": "^7.1.9",
     "marked": "^0.3.5",
     "mongoose": "^4.5.9",
     "mongoose-json-select": "^0.2.1",
