--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babelify": "^7.3.0",
     "body-parser": "^1.15.1",
     "browserify": "^13.0.1",
+    "chai-http": "^3.0.0",
     "compression": "^1.6.2",
     "connect-mongo": "^1.2.0",
     "cookie-parser": "^1.4.3",
@@ -54,7 +55,7 @@
     "react-router": "^2.4.1",
     "serve-favicon": "^2.3.0",
     "stylus": "^0.54.5",
-    "superagent": "^2.0.0",
+    "superagent": "^2.3.0",
     "swagger-jsdoc": "^1.7.0",
     "to-markdown": "^3.0.0",
     "underscore": "^1.8.3",
@@ -66,7 +67,7 @@
     "istanbul": "^0.4.3",
     "mocha": "^2.5.3",
     "mockgoose": "^6.0.3",
-    "supertest": "^1.2.0"
+    "supertest": "^2.0.0"
   },
   "standard": {
     "ignore": [
