--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "compression": "^1.6.2",
     "connect-mongo": "^1.2.0",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.1",
     "email-templates": "^2.3.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
