--- a/cliente/ng2-admin/package.json
+++ b/cliente/ng2-admin/package.json
@@ -6,7 +6,6 @@
   "homepage": "http://akveo.github.io/ng2-admin/",
   "license": "MIT",
   "dependencies": {
-
     "@angular/common": "2.0.0",
     "@angular/compiler": "2.0.0",
     "@angular/core": "2.0.0",
@@ -16,13 +15,11 @@
     "@angular/platform-browser-dynamic": "2.0.0",
     "@angular/platform-server": "2.0.0",
     "@angular/router": "3.0.0",
-
     "@angularclass/conventions-loader": "^1.0.2",
     "@angularclass/hmr": "~1.2.0",
     "@angularclass/hmr-loader": "~3.0.2",
     "@angularclass/request-idle-callback": "^1.0.7",
     "@angularclass/webpack-toolkit": "^1.3.3",
-
     "amcharts3": "github:amcharts/amcharts3",
     "ammap3": "github:amcharts/ammap3",
     "animate.css": "^3.5.1",
@@ -53,6 +50,7 @@
     "ng2-smart-table": "^0.3.1",
     "ng2-tree": "^0.0.2-7",
     "ng2-uploader": "1.1.0",
+    "ng2-webstorage": "^1.3.4",
     "normalize.css": "^4.1.1",
     "postcss-loader": "^1.0.0",
     "rxjs": "5.0.0-beta.12",
