--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "supertest": "^2.0.0"
   },
   "standard": {
+    "parser":"babel-eslint",
     "ignore": [
       "describe",
       "myVar2"
