--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "test2": "NODE_PATH=. DB_Conection='test' istanbul cover _mocha -- -R spec test/server/api/*.spec.js",
     "cp-static": "cp -r  cliente/static/ public/static",
     "coverage": "NODE_PATH=. DB_Conection='test' istanbul cover _mocha -- -R spec --recursive  test/server/**/*.spec.js",
-    "dist": "babel server/server.js server/**/*.js  --out-dir dist --presets es2015,react",
-    "server2": "NODE_PATH=. babel-node  server/server --presets es2015,react ",
+    "dist2": "babel server/server.js server/**/*.js  --out-dir dist --presets es2015,react",
+    "dist": "babel server/server.js server/**/*.js  --out-dir dist",
+    "server1": "NODE_PATH=. babel-node  server/server --presets es2015,react ",
+    "server2": "NODE_PATH=. babel-node  server/server ",
     "server": "NODE_PATH=./dist node dist/server/server.js",
     "server3": "DB_Conection='test' NODE_PATH=. node bin/www",
     "stylusGenerar": "stylus -c cliente/stylus/style.stly -o public/static/css",
     "stylus": "stylus -w -c cliente/stylus/style.stly -o public/static/css",
-    "start": "  npm run dist && npm run server2",
+    "start4": "  npm run dist && npm run server2",
+    "start": "  npm run dist && NODE_PATH=. node dist/bin/www",
     "lint": "standard"
   },
   "author": "Miguel Suescun <debian789@gmail.com>",
@@ -27,7 +30,6 @@
     "babelify": "^7.3.0",
     "body-parser": "^1.17.1",
     "browserify": "^14.1.0",
-    "chai-http": "^3.0.0",
     "compression": "^1.6.2",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
@@ -58,7 +60,6 @@
     "serve-favicon": "^2.4.2",
     "stylus": "^0.54.5",
     "superagent": "^3.5.2",
-    "swagger-jsdoc": "^1.9.2",
     "to-markdown": "^3.0.4",
     "underscore": "^1.8.3",
     "validator": "^7.0.0",
@@ -66,9 +67,6 @@
   },
   "devDependencies": {
     "babel-eslint": "^7.2.1",
-    "chai": "^3.5.0",
-    "istanbul": "^0.4.3",
-    "mocha": "^2.5.3",
     "mockgoose": "^6.0.3",
     "standard": "^9.0.2",
     "supertest": "^2.0.0"
