Limpieza de codigo

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "coverage": "NODE_PATH=. DB_Conection='test' istanbul cover _mocha -- -R spec --recursive  test/server/**/*.spec.js",
     "dist2": "babel server/server.js server/**/*.js  --out-dir dist --presets es2015,react",
     "dist3": "babel server/server.js server/**/*.js  --out-dir dist",
-    "dist": "babel server/**/* server/**/*  --out-dir dist",
+    "dist": "babel server/app.js  server/**/* --out-dir dist",
     "server1": "NODE_PATH=. babel-node  server/server --presets es2015,react ",
     "server2": "NODE_PATH=. babel-node  server/server ",
     "server": "NODE_PATH=./dist node dist/server/server.js",
@@ -19,7 +19,8 @@
     "stylusGenerar": "stylus -c cliente/stylus/style.stly -o public/static/css",
     "stylus": "stylus -w -c cliente/stylus/style.stly -o public/static/css",
     "start4": "  npm run dist && npm run server2",
-    "start": "  npm run dist && NODE_PATH=. node dist/server/bin/www.js",
+    "start2": "  npm run dist && cd dist && NODE_PATH=. node dist/server/bin/www.js",
+    "start": " NODE_PATH=.  babel-node server/bin/www",
     "lint": "standard"
   },
   "author": "Miguel Suescun <debian789@gmail.com>",
