--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "stylus": "stylus -w -c cliente/stylus/style.stly -o public/static/css",
     "start4": "  npm run dist && npm run server2",
     "start2": "  npm run dist && cd dist && NODE_PATH=. node dist/server/bin/www.js",
-    "start": "babel-node server/bin/www",
+    "start1": "babel-node server/bin/www",
+    "start": "nodemon server/bin/www --exec babel-node",
     "lint": "standard"
   },
   "author": "Miguel Suescun <debian789@gmail.com>",
@@ -38,8 +39,11 @@
     "cors": "^2.8.1",
     "email-templates": "^2.5.4",
     "express": "^4.15.2",
+    "express-graphql": "^0.6.4",
     "express-session": "^1.15.1",
     "futures": "^2.3.3",
+    "graphql": "^0.9.2",
+    "graphql-tools": "^0.11.0",
     "hammerjs": "^2.0.8",
     "handlebars": "^4.0.6",
     "highlight.js": "^9.10.0",
@@ -52,6 +56,7 @@
     "mongoose-token": "^1.0.3",
     "morgan": "^1.8.1",
     "nodemailer": "^3.1.8",
+    "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
