--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "server/bin/www",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "ava",
     "start": "nodemon ./server/server.js --exec babel-node"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ava/babel-preset-stage-4": "^1.0.0",
     "babel": "^6.23.0",
+    "babel-polyfill": "^6.23.0",
     "body-parser": "^1.17.1",
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.3",
@@ -39,12 +41,16 @@
     "winston": "^2.3.1"
   },
   "devDependencies": {
+    "ava": "^0.19.1",
     "babel-cli": "^6.24.1",
     "babel-eslint": "^7.2.1",
     "babel-plugin-inline-import": "^2.0.4",
+    "babel-plugin-rewire": "^1.1.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1"
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
+    "babel-register": "^6.24.1"
   },
   "standard": {
     "parser": "babel-eslint",
@@ -52,5 +58,11 @@
       "describe",
       "myVar2"
     ]
+  },
+  "ava": {
+    "require": ["babel-register"]
+  },
+  "babel": {
+    "presets": ["@ava/stage-4"]
   }
 }
