Cambio de nombre del proyecto

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Library-cheat-code",
+  "name": "DevelopmentDocumentationManagerApi",
   "version": "1.0.0",
   "description": "",
   "main": "server/bin/www",
