--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
     "underscore": "^1.8.3",
     "uuid": "^3.0.1",
     "validator": "^7.0.0",
-    "winston": "^2.3.1"
+    "winston": "^2.3.1",
+    "babel-cli": "^6.24.1"
   },
   "devDependencies": {
     "ava": "^0.19.1",
-    "babel-cli": "^6.24.1",
     "babel-eslint": "^7.2.1",
     "babel-plugin-inline-import": "^2.0.4",
     "babel-plugin-rewire": "^1.1.0",
